# Samudra

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/: pull_request_template.md
configs/: eval_samudra_om4.yaml  rollout_samudra_om4.yaml  train_samudra_om4.yaml
notebooks/: notebook_utils.py  samudra_plotting.ipynb  samudra_plotting_multiseed.ipynb  samudra_rollout.ipynb
samudra/: constants.py  data_loaders.py  model.py  utils.py
scripts/: .eval  .local-om4-eval  .local-om4-train  .slurm-perlmutter-train  .slurm-train  .train  download-beaker.sh
src/: config.py  constants.py  datasets.py  eval.py  rollout.py  stepper.py  train.py
src/models/: __init__.py  activations.py  blocks.py  factory.py  samudra.py
src/utils/: data.py  device.py  distributed.py  logging.py  notebook_utils.py  outputs.py  train.py  writer.py
